--- a/src/configs/classification/mi/joint_flow_z.yaml
+++ b/src/configs/classification/mi/joint_flow_z.yaml
@@ -15,6 +15,7 @@ data:
   input_size: 1 # n_dims
   perc: 1.0
   mus: [0.0, 0.0]
+  scales: [0.000001, 1.0]
   class_idx: 20
   num_workers: 4
   # mi: 80
